--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script>
     setTimeout(function(){
-        window.location = "https://www.revenuecpmgate.com/rjybp3p2?key=b48cbd4090d08fc5f015ad33bd4731d3";
+        window.location = "https://s.shopee.co.id/8pcx1Tq99Q";
     }, 2000);
+
 </script>
